--- a/main.html
+++ b/main.html
@@ -9,8 +9,20 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
-			
+
+			let max = Number.MIN_SAFE_INTEGER;
+            let secondMax = Number.MIN_SAFE_INTEGER;
+			for(let i = 0;i < arr.length; i++) {
+				if(arr[i] > max) {
+					secondMax = max;
+					max = arr[i];
+				}
+				else if(arr[i] > secondMax) {
+					secondMax = arr[i];
+				}
+			}
+
+			return secondMax;
 		}
 
 		function Main() {
