--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>	
+	
 	<script>
 		function secondHighest(arr) {
-
 			let max = Number.MIN_SAFE_INTEGER;
-            let secondMax = Number.MIN_SAFE_INTEGER;
+            let secondMax
 			for(let i = 0;i < arr.length; i++) {
 				if(arr[i] > max) {
 					secondMax = max;
@@ -22,7 +22,7 @@
 				}
 			}
 
-			return secondMax;
+			return secondMax === Number.MIN_SAFE_INTEGER ? undefined : Number.MIN_SAFE_INTEGER  ;
 		}
 
 		function Main() {
